use badger as default storage engine
- remove session storage
- add bearer authorization
