# pkg/app.go
@@ -3,10 +3,10 @@ package todo
 //go:generate swag init -g app.go
 import (
 	"context"
+	"log"
 	"os"
+	"time"
 
-	"github.com/gorilla/sessions"
-	"github.com/labstack/echo-contrib/session"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	echoSwagger "github.com/swaggo/echo-swagger"
@@ -14,19 +14,28 @@ import (
 	"github.com/whitekid/go-todo/pkg/handlers/auth"
 	"github.com/whitekid/go-todo/pkg/handlers/oauth"
 	"github.com/whitekid/go-todo/pkg/handlers/todo"
+	"github.com/whitekid/go-todo/pkg/storage"
 	. "github.com/whitekid/go-todo/pkg/types"
 	"github.com/whitekid/go-utils/service"
 )
 
 // New create new todo service
 func New() service.Interface {
-	return &todoService{}
+	storage, err := storage.New("todo")
+	if err != nil {
+		panic(err)
+	}
+
+	return &todoService{
+		storage: storage,
+	}
 }
 
 // HTTPError type alias for workaround swagger schema
 type HTTPError = echo.HTTPError
 
 type todoService struct {
+	storage storage.Interface
 }
 
 // @title TODO API
@@ -34,8 +43,24 @@ type todoService struct {
 // @description This is a simple todo API service.
 // @host
 // @BasePath /
-func (s *todoService) Serve(ctx context.Context, args ...string) error {
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+func (s *todoService) Serve(ctx context.Context, args ...string) (err error) {
 	e := s.setupRoute()
+
+	defer s.storage.Close()
+
+	go func() {
+		<-ctx.Done()
+
+		ctx, cancel := context.WithTimeout(ctx, time.Second*5)
+		defer cancel()
+		if err := e.Shutdown(ctx); err != nil {
+			log.Fatal(err)
+		}
+	}()
+
 	return e.Start("127.0.0.1:9998")
 }
 
@@ -54,39 +79,14 @@ func (s *todoService) setupRoute() *echo.Echo {
 			return next(cc)
 		}
 	})
-	e.Use(session.Middleware(sessions.NewCookieStore([]byte("todo"))),
-		func(next echo.HandlerFunc) echo.HandlerFunc {
-			return func(c echo.Context) error {
-				sess, _ := session.Get("session", c)
-				sess.Options = &sessions.Options{
-					Path:   "/",
-					MaxAge: 86400,
-				}
-				c.Set("session", sess)
 
-				return next(c)
-			}
-		})
-
-	todo.New().Route(e.Group(""))
+	todo.New(s.storage).Route(e.Group(""))
 	auth.New().Route(e.Group("/auth"))
-	oauth.New(oauth.Options{
+	oauth.New(s.storage, oauth.Options{
 		ClientID:     os.Getenv("TODO_CLIENT_ID"),
 		ClientSecret: os.Getenv("TODO_CLIENT_SECRET"),
 		RedirectURL:  os.Getenv("TODO_ROOT_URL") + "/oauth/callback", // TODO configurable redirectURL
-	}).Route(e.Group("/oauth",
-		func(next echo.HandlerFunc) echo.HandlerFunc {
-			return func(c echo.Context) error {
-				sess, _ := session.Get("oauth", c)
-				sess.Options = &sessions.Options{
-					Path:   "/oauth",
-					MaxAge: 300,
-				}
-				c.Set("oauth-session", sess)
-
-				return next(c)
-			}
-		}))
+	}).Route(e.Group("/oauth"))
 
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 
